-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P5
-
Affects Version/s: 9
-
Component/s: hotspot
-
b21
-
x86, sparc
I see a different behavior in warning messaging on x86 and sparc when using these options -XX:-UseAES -XX:+UseAESIntrinsics
On solaris-sparcv9 VM doesn't throw a message:
-bash-4.1$ bin/java -XX:-UseAES -XX:+UseAESIntrinsics -version
java version "1.9.0-ea"
Java(TM) SE Runtime Environment (build 1.9.0-ea-b15)
Java HotSpot(TM) 64-Bit Server VM (build 1.9.0-ea-b15, mixed mode)
while on Linux-amd64 host it does:
$ $JAVA_HOME/bin/java -XX:-UseAES -XX:+UseAESIntrinsics -version
Java HotSpot(TM) 64-Bit Server VM warning: AES intrinsics are not available on -XX:-UseAES -XX:+UseAESIntrinsicsthis CPU
java version "1.9.0-ea"
Java(TM) SE Runtime Environment (build 1.9.0-ea-b12)
Java HotSpot(TM) 64-Bit Server VM (build 25.0-b62, mixed mode)
Both machines have AES support. If host has no AES support then it VM throws warning message on both platforms.
ILW = L(warning message)- L(Internal options) - L(no need to use them explicitly) = P5
On solaris-sparcv9 VM doesn't throw a message:
-bash-4.1$ bin/java -XX:-UseAES -XX:+UseAESIntrinsics -version
java version "1.9.0-ea"
Java(TM) SE Runtime Environment (build 1.9.0-ea-b15)
Java HotSpot(TM) 64-Bit Server VM (build 1.9.0-ea-b15, mixed mode)
while on Linux-amd64 host it does:
$ $JAVA_HOME/bin/java -XX:-UseAES -XX:+UseAESIntrinsics -version
Java HotSpot(TM) 64-Bit Server VM warning: AES intrinsics are not available on -XX:-UseAES -XX:+UseAESIntrinsicsthis CPU
java version "1.9.0-ea"
Java(TM) SE Runtime Environment (build 1.9.0-ea-b12)
Java HotSpot(TM) 64-Bit Server VM (build 25.0-b62, mixed mode)
Both machines have AES support. If host has no AES support then it VM throws warning message on both platforms.
ILW = L(warning message)- L(Internal options) - L(no need to use them explicitly) = P5