8044829: UseAES warning message generation differs on CPU architecture

Fixed issue with feature flag setting when AES support disabled explicitly

Reviewed-by: kvn